u crediting on css files

--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,7 +1,9 @@
 /* 1.7. Timeline */
 
-/* Adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ */
+/* This CSS file has been created by Adrian S. Wisnicki (2020-2023) and is adapted from https://codepen.io/hassan-kamal/pen/NNvYEQ */
 /* Also see https://onaircode.com/html-css-vertical-timeline-examples/ */
+/* For further information about the Undisciplining the Victorian Classroom CSS files, see /css/style.css */
+/* This CSS file is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
 /* Note: The timeline CSS is only used on pages that have a timeline, such as /html/lesson_plans/east_asia_timeline.html */
 
 /* hyperlinks for centuries */
