--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ body{
 .text-container{
 	width: 100%;
 }
-/* used to create the header which, at present, is only a spaceholder on the page */
+/* creates the header which, at present, is only a spaceholder on the page */
 /* note: the coding on this should be changed to support accessibility */
 header{
 	margin: 43px auto 0;
@@ -388,7 +388,7 @@ ol.endnotes:before{
 	margin: 0 0 .5rem -1rem;
 	display: inline-block;
 }
-/* *** */
+/* main container for the footer */
 footer{
 	font-size: 1em;
 	text-align: center;
@@ -404,10 +404,13 @@ footer{
 		padding: .5em 1em 1em 1em;
 	}
 }
+/* main container for individual items in the footer */
+/* note: the coding on this could be changed to an unordered list to support accessibility */
 footer p .site-detail{
 	line-height: 1.875em;
 	padding: 0 .2em;
 }
+/* separator for individual items in the footer */
 footer p .site-detail::after{
 	content: ' | ';
 	padding-left: .5em;
@@ -425,14 +428,17 @@ footer p .site-detail:last-child::after{
 		white-space: nowrap;
 	}
 }
+/* hyperlink for individual items in the footer */
 footer p .site-detail a,
 footer p .site-detail a:visited{
 	text-decoration: none;
 }
+/* hyperlink decoration for individual items in the footer */
 footer p .site-detail a span,
 footer p .site-detail a:visited span{
 	text-decoration: underline;
 }
+/* interjected sections of text that are not part of the main page content */
 .breakout-quote{
 	font-size: .9em;
 	font-family: 'Noto Serif', serif;
@@ -441,6 +447,7 @@ footer p .site-detail a:visited span{
 	margin: 1.5em auto;
 	padding: .75em 1.5em;
 }
+/* divider lines */
 hr{
 	font-size: .9em;
 	background: #858585;
@@ -453,7 +460,7 @@ hr{
 		margin: 2em 0;
 	}
 }
-/* Makes overlay disappear above 1200 */
+/* the following coding, which is tied to elements above in this subsection of the CSS, makes the overlay disappear above 1200 */
 @media only screen and (min-width: 1200px){
 	html{
 		background: #fff !important;
@@ -482,9 +489,11 @@ hr{
 
 /* 1.3. Anchors, Headings, Images */
 
+/* removes the default focus on individual items */
 *:focus{
 	outline: 0 none;
 }
+/* links */
 a,
 a:visited{
 	color: #395375;
@@ -496,6 +505,7 @@ a:focus{
 	background-color: #395375;
 	transition: 0.2s;
 }
+/* links in the footer */
 footer a,
 footer a:visited{
 	color: #fff;
@@ -506,12 +516,14 @@ footer a:focus{
 	background-color: #e6e6e6;
 	transition: 0.2s;
 }
+/* links used in the "Page Citation" section */
 a.cite-link{
 	overflow-wrap: break-word;
 	word-wrap: break-word;
 	word-break: break-word;
 	-ms-word-break: break-all;
 }
+/* sets the position of same-page links */
 [id]:target{
 	margin-top: -43px;
 	border-top: 43px solid transparent;
@@ -537,6 +549,7 @@ a.cite-link{
 		border-top: 65px solid transparent;
 	}
 }
+/* headings */
 h1,
 h2,
 h3,
@@ -562,6 +575,7 @@ h2{
 h3{
 	font-size: 1.1em;
 }
+/****/
 .details h3{
 	font-variant: small-caps;
 	color: inherit;
