--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,6 @@ Table of Contents
 1.2.1. Cluster Pages [moved to separate file]
 1.2.2. Content Pages [moved to separate file]
 1.3.1. Anchors, Headings, Images
-1.3.2. Image Captions
 1.4.1. Navigation: Main
 1.4.2. Overlay
 1.5. Carousel [moved to separate file]
@@ -461,6 +460,7 @@ hr{
 	}
 }
 /* the following coding, which is tied to elements above in this subsection of the CSS, makes the overlay disappear above 1200 */
+/* for full overlay coding, see subsection below */
 @media only screen and (min-width: 1200px){
 	html{
 		background: #fff !important;
@@ -575,11 +575,6 @@ h2{
 h3{
 	font-size: 1.1em;
 }
-/****/
-.details h3{
-	font-variant: small-caps;
-	color: inherit;
-}
 h4,
 section section h4:first-child{
 	font-size: .95em;
@@ -609,7 +604,7 @@ h6{
 h7{
 	font-style: italic;
 }
-/*logo*/
+/* site logo */
 @font-face {
   font-family: 'jacksilverregular';
   src: url('/fonts/jacksilver-webfont.woff2') format('woff2'),
@@ -618,11 +613,13 @@ h7{
 	font-style: normal;
 	font-display: block;
 }
+/* images */
 img{
 	font-weight: 300;
 	border-style: none;
 	width: 100%;
 }
+/* hyperlinked images */
 a img{
 	border: 3px #fff solid;
 }
@@ -630,81 +627,15 @@ a:hover img,
 a:focus img{
 	border: 3px #395375 solid;
 }
+/* creates a solid border for images when added */
 .image-border{
 	border: 1px solid #858585;
 }
 
 
-/* 1.3.2. Image Captions */
-
-/* Also see carousel captions */
-.image-caption{
-	text-align: center;
-	line-height: 1.2em;
-	padding: 0;
-	position: absolute;
-	right: 0;
-	bottom: 1em;
-	left: 0;
-}
-@media only screen and (min-width: 480px){
-	.image-caption{
-		line-height: 1.6em;
-	}
-}
-.image-caption p{
-	font: 16px 'Noto Serif', serif;
-	font-weight: 400;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-}
-@media only screen and (min-width: 320px){
-	.image-caption p{
-		line-height: inherit;
-	}
-}
-.image-caption p a{
-	font-size: .9em;
-}
-.image-caption a{
-	text-decoration: underline;
-	text-align: center;
-	color: #fff;
-	background-color: rgba(0, 0, 0, 0.65);
-	border: 2px solid transparent;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	margin: 0;
-	padding: 1px 6px;
-	display: inline-block;
-}
-.image-caption a:hover,
-.image-caption a:focus{
-	background-color: #5378ac;
-	margin: 0;
-}
-.image-caption a:focus{
-	border-color: #5378ac;
-	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
-	-moz-box-shadow: inset 0px 0px 0px 2px #fff;
-	box-shadow: inset 0px 0px 0px 2px #fff;
-}
-.image-wrapper{
-	margin: 0 auto;
-	position: relative;
-}
-@media only screen and (min-width: 768px){
-	.image-wrapper{
-		width: 90%;
-	}
-}
-
-
 /* 1.4.1. Navigation: Main */
 
-/* "Skip to main content" coding adapted from https://webaim.org/techniques/skipnav/ */
+/* "Skip to main content" tab; adapted from https://webaim.org/techniques/skipnav/ */
 #nav0 a{
 	font-size: 1em;
 	color: #fff;
@@ -735,7 +666,7 @@ a:focus img{
 		position: absolute;
 	}
 }
-/* Main nav & fallback */
+/* main container for nav & fallback nav */
 nav#nav1,
 nav#navFB{
 	font: 16px 'Source Sans Pro', sans-serif;
