--- a/css/style.css
+++ b/css/style.css
@@ -51,11 +51,11 @@ Blue: #5378ac; (sections/carousel/images/nav0)
 .content.syllabi main h2,
 .content.about main h2 = 15
 .marker = 19
-nav#nav1, nav#navFB = 20
+nav#nav1, nav#fallback-nav = 20
 #regular-button, 
 nav#nav1 li button = 21
 #fallback-button, 
-nav#navFB li button = 22
+nav#fallback-nav li button = 22
 #topButton = 99
 #nav0 = 100
 nav#nav2 #overlay-menu = 200
@@ -63,8 +63,9 @@ nav#nav2 #overlay-menu = 200
 
 /** 0.0 Section Tile Colors **/
 
-/* section-specific colors, used for cluster page tiles on /index.html */
-/* for further section-specific color specs, see below, /css/cluster.css and /css/content.css */
+/* section-specific colors */
+/* for further section-specific color specs, see /css/cluster.css and /css/content.css */
+/* used for cluster page tiles on /index.html */
 .section-tiles ul li:nth-child(1){
 	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
 }
@@ -97,6 +98,28 @@ nav#nav2 #overlay-menu = 200
 .section-tiles ul li:focus-within a span{
 	background: #2e2e2e;
 }
+/* used for underlining current section in nav with section-specific color */
+nav#nav1 a #home.current{
+	border-bottom: 3px solid #395375;
+}
+nav#nav1 a #zoomcasts.current{
+	border-bottom: 3px solid #cb6948;
+}
+nav#nav1 a #lesson_plans.current{
+	border-bottom: 3px solid #5378ac;
+}
+nav#nav1 a #syllabi.current{
+	border-bottom: 3px solid #778056;
+}
+nav#nav1 a #about.current{
+	border-bottom: 3px solid #757575;
+}
+nav#nav1 a:hover .current,
+nav#nav1 a:focus .current{
+	text-decoration: none;
+	border-bottom: none !important;
+}
+
 
 
 /** 1.0 Main CSS **/
@@ -604,15 +627,6 @@ h6{
 h7{
 	font-style: italic;
 }
-/* site logo */
-@font-face {
-  font-family: 'jacksilverregular';
-  src: url('/fonts/jacksilver-webfont.woff2') format('woff2'),
-      url('/fonts/jacksilver-webfont.woff') format('woff');
-  font-weight: normal;
-	font-style: normal;
-	font-display: block;
-}
 /* images */
 img{
 	font-weight: 300;
@@ -668,7 +682,7 @@ a:focus img{
 }
 /* main container for nav & fallback nav */
 nav#nav1,
-nav#navFB{
+nav#fallback-nav{
 	font: 16px 'Source Sans Pro', sans-serif;
 	font-weight: 400;
 	line-height: 1em;
@@ -679,62 +693,42 @@ nav#navFB{
 	height: 43px;
 	position: fixed;
 	top: 0;
-	/* left: 50%;
-	transform: translate(-50%, 0); */
 	z-index: 20;
 }
 @media only screen and (min-width: 480px){
 	nav#nav1,
-	nav#navFB{
+	nav#fallback-nav{
 		height: 49px;
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav1,
-	nav#navFB{
+	nav#fallback-nav{
 		height:57px;
 	}
 }
 @media only screen and (min-width: 992px){
 	nav#nav1,
-	nav#navFB{
+	nav#fallback-nav{
 		height: 65px;
 	}
 }
-/* Also see cluster.css and content.css  */
-nav#nav1 a #home.current{
-	border-bottom: 3px solid #395375;
-}
-nav#nav1 a #zoomcasts.current{
-	border-bottom: 3px solid #cb6948;
-}
-nav#nav1 a #lesson_plans.current{
-	border-bottom: 3px solid #5378ac;
-}
-nav#nav1 a #syllabi.current{
-	border-bottom: 3px solid #778056;
-}
-nav#nav1 a #about.current{
-	border-bottom: 3px solid #757575;
-}
-nav#nav1 a:hover .current,
-nav#nav1 a:focus .current{
-	text-decoration: none;
-	border-bottom: none !important;
-}
+/* hyperlinks in nav and fallback nav */
 nav#nav1 a,
 nav#nav1 a:visited,
-nav#navFB a,
-nav#navFB a:visited{
+nav#fallback-nav a,
+nav#fallback-nav a:visited{
 	color: #242424;
 	text-decoration: none;
 }
+/* divider line below nav and fallback nav */
 nav#nav1.borderBottom,
-nav#navFB.borderBottom{
+nav#fallback-nav.borderBottom{
 	border-bottom: 1px solid #858585;
 }
+/* list of items in nav and fallback nav */
 nav#nav1 ul,
-nav#navFB ul{
+nav#fallback-nav ul{
 	list-style: none;
 	margin: 0 auto;
 	padding: 0 8px;
@@ -747,37 +741,61 @@ nav#navFB ul{
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 ul,
-	nav#navFB ul{
+	nav#fallback-nav ul{
 		padding: 0 1em 0 .5em;
 	}
 }
 @media only screen and (min-width: 992px){
 	nav#nav1 ul,
-	nav#navFB ul{
+	nav#fallback-nav ul{
 		padding: 0 16px;
 		max-width: 1366px;
 	}
 }
+/* single item in list of items in nav and fallback nav */
 nav#nav1 li,
-nav#navFB li{
+nav#fallback-nav li{
 	display: inline-block;
 }
+/* last item list of items in nav and fallback nav */
 nav#nav1 li:nth-child(8),
-nav#navFB li:nth-child(2){
+nav#fallback-nav li:nth-child(2){
 	position: relative;
 }
+/* font for site logo */
+@font-face {
+  font-family: 'jacksilverregular';
+  src: url('/fonts/jacksilver-webfont.woff2') format('woff2'),
+      url('/fonts/jacksilver-webfont.woff') format('woff');
+  font-weight: normal;
+	font-style: normal;
+	font-display: block;
+}
+/* site logo */
 nav#nav1 h1,
-nav#navFB h1{
+nav#fallback-nav h1{
 	font-size: 1.2rem;
 	white-space: nowrap;
 	border: 2px solid transparent;
 	margin-top: 2px;
 	padding: 0 5px;
 }
+@media only screen and (min-width: 480px){
+	nav#nav1 h1,
+	nav#fallback-nav h1{
+		font-size: 1.6em;
+	}
+}
+@media only screen and (min-width: 768px){
+	nav#nav1 h1,
+	nav#fallback-nav h1{
+		font-size: 2em;
+	}
+}
 nav#nav1 a:hover h1,
 nav#nav1 a:focus-within h1,
-nav#navFB a:hover h1,
-nav#navFB a:focus-within h1{
+nav#fallback-nav a:hover h1,
+nav#fallback-nav a:focus-within h1{
 	background: #e6e6e6;
 	border: 2px solid rgba(0, 0, 0, 0.65);
 	-webkit-border-radius: 5px;
@@ -785,18 +803,7 @@ nav#navFB a:focus-within h1{
 	border-radius: 5px;
 	transition: 0.2s;
 }
-@media only screen and (min-width: 480px){
-	nav#nav1 h1,
-	nav#navFB h1{
-		font-size: 1.6em;
-	}
-}
-@media only screen and (min-width: 768px){
-	nav#nav1 h1,
-	nav#navFB h1{
-		font-size: 2em;
-	}
-}
+/* items in nav excepting logo and hamburger menu */
 nav#nav1 ul li:not(:first-child):not(:last-child){
 	font-size: .95em;
 	font-weight: 600;
@@ -810,10 +817,12 @@ nav#nav1 ul li:not(:first-child):not(:last-child){
 		visibility: visible;
 	}
 }
+/* hyperlinks for all items in nav */
 nav#nav1 li a,
-nav#navFB li a{
+nav#fallback-nav li a{
 	white-space: nowrap;
 }
+/* hyperlinks for items in nav excepting logo and hamburger menu */
 nav#nav1 li:not(:first-child):not(:last-child) a{
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
@@ -826,19 +835,20 @@ nav#nav1 li:not(:first-child):not(:last-child) a:focus{
 	background-color: #395375;
 	transition: 0.2s;
 }
+/* note: span element is the container for text in items in nav */
 nav#nav1 li a:hover,
 nav#nav1 li a:focus,
 nav#nav1 li a:hover span,
 nav#nav1 li a:focus span,
-nav#navFB li a:hover,
-nav#navFB li a:focus,
-nav#navFB li a:hover span,
-nav#navFB li a:focus span{
+nav#fallback-nav li a:hover,
+nav#fallback-nav li a:focus,
+nav#fallback-nav li a:hover span,
+nav#fallback-nav li a:focus span{
 	color: #fff;
 	transition: 0.2s;
 }
 nav#nav1 li button,
-nav#navFB li button{
+nav#fallback-nav li button{
 	background: none;
 	border: none;
 	-webkit-border-radius: 5px;
@@ -854,44 +864,44 @@ nav#navFB li button{
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 li button,
-	nav#navFB li button{
+	nav#fallback-nav li button{
 		padding: 6px 8px;
 	}
 }
 nav#nav1 li button{
 	z-index: 21;
 }
-nav#navFB li button{
+nav#fallback-nav li button{
 	z-index: 22;
 }
 nav#nav1 li button:hover,
 nav#nav1 li button:focus-within,
-nav#navFB li button:hover,
-nav#navFB li button:focus-within{
+nav#fallback-nav li button:hover,
+nav#fallback-nav li button:focus-within{
 	background-color: #395375;
 	transition: 0.2s;
 }
 nav#nav1 li button i,
-nav#navFB li button i{
+nav#fallback-nav li button i{
 	font-size: 1.3rem;
 	color: #242424;
 }
 @media only screen and (min-width: 480px){
 	nav#nav1 li button i,
-	nav#navFB li button i{
+	nav#fallback-nav li button i{
 		font-size: 1.6rem;
 	}
 }
 @media only screen and (min-width: 768px){
 	nav#nav1 li button i,
-	nav#navFB li button i{
+	nav#fallback-nav li button i{
 		font-size: 1.8rem;
 	}
 }
 nav#nav1 li button:hover i,
 nav#nav1 li button:focus i,
-nav#navFB li button:hover i,
-nav#navFB li button:focus i{
+nav#fallback-nav li button:hover i,
+nav#fallback-nav li button:focus i{
 	color: #fff;
 }
 @media only screen and (min-width: 1200px){
