--- a/css/youtube.css
+++ b/css/youtube.css
@@ -105,5 +105,36 @@
 	left: 0;
 	z-index: 3; /* Hides play button when iframe loads */
 }
-
-/* See /css/style.css for skipcontrols used for accessbile YouTube video navigation */
+/* dropdown button for tab navigation to skip controls for YouTube video after starting play */
+.skipcontrols a{
+	font-size: .8em;
+	font-family: Arial, Geneva, Tahoma, sans-serif;
+	color: #395375;
+	background: #e6e6e6;
+	-webkit-border-bottom-right-radius: 8px;
+	-moz-border-bottom-right-radius: 8px;
+	border-bottom-right-radius: 8px;
+	padding: 4px 6px;
+	position: absolute;
+	left: 0px;
+	z-index: 10;
+	-webkit-transition: top 1s ease-out;
+	transition: top 1s ease-out;
+}
+@media only screen and (min-width: 768px){
+	.skipcontrols a{
+		font-size: .9em;
+	}
+}
+.skipcontrols a{
+	border: 2px solid #fff;
+	top: -45px;
+}
+.skipcontrols a:focus{
+	outline-color: transparent;
+	top: 0px;
+	left: 0px;
+	position: absolute;
+	-webkit-transition: top .4s ease-in;
+	transition: top .4s ease-in;
+}
