--- a/css/content.css
+++ b/css/content.css
@@ -141,7 +141,8 @@ the .british-japanese class is used only for the following files: /html/lesson_p
 .content.error404 main section:first-of-type p{
 	text-align: center;
 }
-/* ratio box used for header images; adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
+/* ratio box used for header images */ 
+/* adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
 .content main .aspect-ratio-box{
 	margin: .75em auto 1.75em;
 	padding: 0;
