--- a/css/cluster.css
+++ b/css/cluster.css
@@ -155,7 +155,7 @@
 	border-radius: 5px;
 	margin: 0;
 	padding: 10px;
-	height: 33px;
+	height: auto;
 	position: absolute;
 	top: 50%;
 	left: 50%;
