--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* This CSS file has been created by Adrian S. Wisnicki (2020-2023) and is adapted from the CSS files for One More Voice (https://onemorevoice.org/) and Fieldwork of Empire (https://awisnicki.github.io/fieldwork_of_empire/). */
 /* This CSS file, like the ones from which it is adapted, is released under a Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0) license (https://creativecommons.org/licenses/by-nc/4.0/). Please feel free to reuse the present code, but be sure to attribute it properly and publicly on your site.  */
-/* This is the main CSS file for Undisciplining the Victorian Classroom (UVC) site (https://undiscipliningvc.org/). It encompasses styling the is common across all pages of the site. It also includes coding for files that constitute the first level of the UVC site; these files appear in the root directory and include /404.html, /index.html, and /sitemap.html */
+/* This is the main CSS file for Undisciplining the Victorian Classroom (UVC) site (https://undiscipliningvc.org/). It encompasses styling that is common across all pages of the site, including coding for files that constitute the first level of the UVC site: /404.html, /index.html, and /sitemap.html */
 
 /* 
 Table of Contents
@@ -64,40 +64,7 @@ nav#nav2 #overlay-menu = 200
 /** 0.0 Section Tile Colors **/
 
 /* section-specific colors */
-/* for further section-specific color specs, see /css/cluster.css and /css/content.css */
-/* used for cluster page tiles on /index.html */
-.section-tiles ul li:nth-child(1){
-	background: linear-gradient(to left top, #fff 50%, #cb6948 50%);
-}
-.section-tiles ul li:nth-child(1) a span{
-	background: #cb6948;
-}
-.section-tiles ul li:nth-child(2){
-	background: linear-gradient(to left top, #fff 50%, #5378ac 50%);
-}
-.section-tiles ul li:nth-child(2) a span{
-	background: #5378ac;
-}
-.section-tiles ul li:nth-child(3){
-	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
-}
-.section-tiles ul li:nth-child(3) a span{
-	background: #728a61;
-}
-.section-tiles ul li:nth-child(4){
-	background: linear-gradient(to left top, #fff 50%, #757575 50%);
-}
-.section-tiles ul li:nth-child(4) a span{
-	background: #757575;
-}
-.section-tiles ul li a:hover,
-.section-tiles ul li a:focus-within{
-	background: linear-gradient(to left top, #fff 50%, #2e2e2e 50%);
-}
-.section-tiles ul li:hover a span,
-.section-tiles ul li:focus-within a span{
-	background: #2e2e2e;
-}
+/* for further section-specific color specs, see /css/cluster.css and /css/content.css, /css/index.css */
 /* used for underlining current section in nav with section-specific color */
 nav#nav1 a #home.current{
 	border-bottom: 3px solid #395375;
@@ -237,169 +204,7 @@ main section ol,
 main section ul{
 	text-align: left;
 }
-/* the container for cluster page tiles on /index.html */
-.section-tiles{
-	font-size: 1.1em;
-	margin-bottom: 1em;
-}
-/* the list of cluster page tiles on /index.html */
-.section-tiles ul{
-	list-style: none;
-	margin: .75em auto 0;
-	padding: 0;
-	display: -webkit-flex;
-	display: flex;
-	justify-content: space-evenly;
-	align-items: center;
-	flex-wrap: wrap;
-}
-/* an item in the list of cluster page tiles on /index.html */
-.section-tiles ul li{
-	color: #fff;
-	text-align: center;
-	border: 1px solid #242424;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	margin: .75em;
-	flex: 1 1 100%;
-	position: relative;
-}
-@media only screen and (min-width: 480px){
-	.section-tiles ul li{
-		margin: .5em;
-		flex: 1 1 calc(50% - 2.25em - 1px)
-	}
-}
-@media only screen and (min-width: 992px){
-	.section-tiles ul li{
-		margin: .75em;
-		flex: 1 1 calc(50% - 2.25em - 1px)
-	}
-}
-/* ratio box used to set up cluster page tiles on /index.html */ 
-/* adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
-.section-tiles ul li::after{
-	content: "";
-	padding-bottom: 56.25%;
-	display: block;
-}
-/* hyperlink for cluster page tiles on /index.html */
-.section-tiles ul li a,
-.section-tiles ul li a:visited{
-	color: #fff;
-	text-decoration: none;
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-/* text for for cluster page tiles on /index.html */
-.section-tiles ul li a span{
-	font-family: 'Noto Serif', serif;
-	font-weight: 600;
-	white-space: nowrap;
-	border: 3px solid #fff;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	margin: 0;
-	padding: 10px;
-	height: auto;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	-webkit-transform: translate(-50%, -50%);
-	-moz-transform: translate(-50%, -50%);
-	transform: translate(-50%, -50%);
-}
-/* container for "Founding Developers" section on /index.html */
-.founding-dev{
-	margin: 0 auto 2em;	
-	display: inline-block;
-}
-/* list for people for "Founding Developers" section on /index.html */
-.founding-dev ul{
-	list-style: none;
-	margin-bottom: 0;
-	padding: 0;
-}
-/* container for social media links section on /index.html */
-.participate{
-	text-align: center;
-	background: #e6e6e6;
-	border: 1px solid #242424;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	margin: .5em auto;
-	padding: 0 1em 1em;
-	display: inline-block;
-}
-/* paragraph for text in social media links section on /index.html */
-.participate p{
-	text-align: center;
-	margin: .5em 0;
-}
-/* container for social media links in social media links section on /indext.html */
-.participate div{
-	display: -webkit-flex;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-/* hyperlink for social media links */
-.participate a,
-.participate a:visited{
-	font-size: .95em;
-	line-height: 1.2em;
-	color: #fff;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	margin: 0 .25em;
-	padding: 4px 5px;
-	text-decoration: none;
-	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-@media only screen and (min-width: 768px){
-	.participate a,
-	.participate a:visited{
-		line-height: 1em;
-		margin: 0 .5em;
-		padding: 4px 7px;
-	}
-}
-.participate a:focus{
-	outline: 1px dashed #242424;
-}
-/* Twitter link in social media links section on /index.html */
-.participate a.follow{
-	background-color: #1C95E1;
-	border: 1px solid #1C95E1;
-}
-.participate a.follow:focus,
-.participate a.follow:hover{
-	color: #1C95E1;
-	background: #fff;
-}
-/* "Mailing List/Get Involved" link in social media links section on /index.html */
-.participate a.contribute{
-	background-color: #395375;
-	border: 1px solid #395375;
-}
-.participate a.contribute:focus,
-.participate a.contribute:hover{
-	color: #242424;
-	background: #fff;
-}
-/* spacing for section following social media links section on /index.html */
-@media only screen and (min-width: 768px){
-	.participate + section{
-		margin-top: 2em;
-	}
-}
+
 /* endnote lists; currently only used on /html/syllabi/capital-l_literature.html */
 ol.endnotes{
 	padding: 0 0 0 1em;
